[gd_scene load_steps=6 format=3 uid="uid://ckulhq8ustuku"]

[ext_resource type="Script" path="res://main.gd" id="1_jf5qi"]
[ext_resource type="PackedScene" uid="uid://cjr4e4s47o8t4" path="res://stick.tscn" id="2_02klh"]
[ext_resource type="PackedScene" uid="uid://olk3hwnoirma" path="res://ball.tscn" id="3_3blga"]
[ext_resource type="PackedScene" uid="uid://qs6ujrjfm1v7" path="res://score_pad.tscn" id="4_5qnr0"]
[ext_resource type="AudioStream" uid="uid://c6t8k4d7lho74" path="res://money-pickup-2-89563.mp3" id="5_w1lo6"]

[node name="Main" type="Node2D"]
script = ExtResource("1_jf5qi")
ball = ExtResource("3_3blga")
pong = ExtResource("2_02klh")
score_pad = ExtResource("4_5qnr0")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 15.0
offset_top = 17.0
offset_right = 76.0
offset_bottom = 57.0
text = "Score: 0"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="MoneySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_w1lo6")

[node name="StickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_w1lo6")
volume_db = -29.405
pitch_scale = 4.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
